<resources>
    <string name="app_name">The Desolate</string>
    <string name="edit_message">Enter your name</string>
    <string name="days_survived">YOU SURVIVED %1$d DAYS IN THE DESOLATE</string>
    <string name="rooms_explored">YOU EXPLORED %1$d AREAS</string>
    <string name="game_over">YOU DIED</string>
    <string name="game_score">TOTAL SCORE: %1$d</string>
    <string name="button_send">Send</string>
    <string name="button_highScores">High Scores</string>
    <string name="button_quit">Quit</string>
    <string name="button_start">Start</string>
    <string name="button_search">Search</string>
    <string name="game_start">You awake for the first time in your new home, an empty metal container you stumbled across in your wandering. It\'s safe here, but you know you must venture out into the Desolate. You must find food and water or you will die.</string>
    <string name="button_north">Go North</string>
    <string name="button_east">Go East</string>
    <string name="button_south">Go South</string>
    <string name="button_west">Go West</string>
    <string name="vitality_header">Vitality</string>
    <string name="room_description0">You are home. The metal walls provide you a brief respite from the predators residing in The Desolate.</string>
    <string name="room_description1">You find yourself in another barren corner of The Desolate.</string>
    <string name="room_description2">You are surrounded by dry dirt.</string>
    <string name="room_description3">You find yourself in the middle of more barren wastes.</string>
    <string name="room_description4">Another barren field. You inhale and the dirt scratches your lungs.</string>
    <string name="room_description5">As far as you can see, there is nothing around you.</string>
    <string name="room_description6">You stumble upon the remains of a small town. Families once lived here.</string>
    <string name="room_description7">Before you looms the ancient ruins of a once proud building.</string>
    <string name="room_description8">You find yourself underneath the wreckage of a collapsed highway.</string>
    <string name="room_description9">Before you lies a frail wooden structure.</string>
    <string name="room_description10">You find a dead tree. Nothing good lives in The Desolate.</string>
    <string name="room_description11">You find a field of dry, dead roots. They crunch under your feet.</string>
    <string name="room_description12">You stand before an empty metal vehicle from a lost age.</string>
    <string name="room_description13">You stop in a barren field. Before you lie prints in the sand. Not human.</string>
    <string name="room_description14">There is nothing around. The wind blows more dirt into your eyes.</string>
    <string name="room_description15">You find some oddly shaped stones in the desert. They remind you of people. It\'s been so long…</string>
    <string name="room_description16">You come to a particularly windy corner of The Desolate. You squint to see through the dirt.</string>
    <string name="room_description17">Here you find the carcass of a small house.</string>
    <string name="room_description18">You stumble upon an old farm with strong foundations. It was built to last.</string>
    <string name="room_description19">You wander into a field of bones, eroding against the dirt tossed by the wind.</string>
    <string name="room_description20">You come to the top of a dune. In the sand is a human skull. What were their last thoughts?</string>
    <string name="room_blocked1">Can\'t go that way.</string>
    <string name="room_blocked2">That way is blocked by rocky mountains.</string>
    <string name="room_blocked3">Obstacles beset that path.</string>
    <string name="room_blocked4">That way is impassable.</string>
    <string name="resources_found">You have found some valuable supplies. Your vitality is greatly restored.</string>
    <string name="resources_not_found">You find nothing of use.</string>
    <string name="day">Day %1$d</string>
    <string name="coordinates">\(X: %1$d \, Y: %2$d \)</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="button_menu">MENU</string>
</resources>